--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "BSD-2-Clause",
   "type": "module",
   "exports": "./index.js",
+  "sideEffects": false,
   "files": [
     "./index.js"
   ],
