--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "timerel",
   "version": "5.0.1",
-  "description": "Teeny tiny relative date formatting",
+  "description": "Teeny-tiny relative date formatting",
   "author": "silverwind",
   "repository": "silverwind/timerel",
   "license": "BSD-2-Clause",
