--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint": "8.21.0",
     "eslint-config-silverwind": "51.0.3",
     "jest": "28.1.3",
+    "timeago.js": "4.0.2",
     "updates": "13.1.3",
     "versions": "9.3.0"
   }
