--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "datetime"
   ],
   "devDependencies": {
-    "eslint": "8.24.0",
-    "eslint-config-silverwind": "55.1.0",
-    "jest": "29.0.3",
+    "eslint": "8.26.0",
+    "eslint-config-silverwind": "59.0.1",
     "timeago.js": "4.0.2",
-    "updates": "13.1.8",
-    "versions": "9.3.3"
+    "updates": "13.1.10",
+    "versions": "10.0.4",
+    "vitest": "0.24.3"
   }
 }
