--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "./index.js"
   ],
   "devDependencies": {
-    "eslint": "8.38.0",
-    "eslint-config-silverwind": "65.1.5",
+    "eslint": "8.43.0",
+    "eslint-config-silverwind": "73.0.4",
     "timeago.js": "4.0.2",
-    "updates": "14.0.1",
-    "versions": "11.0.0",
-    "vitest": "0.30.1"
+    "updates": "14.2.8",
+    "versions": "11.0.1",
+    "vitest": "0.32.2",
+    "vitest-config-silverwind": "1.0.0"
   }
 }
