--- a/package.json
+++ b/package.json
@@ -12,12 +12,18 @@
     "./index.js"
   ],
   "devDependencies": {
+    "@types/node": "20.12.8",
     "eslint": "8.57.0",
-    "eslint-config-silverwind": "83.0.2",
+    "eslint-config-silverwind": "84.0.0",
+    "eslint-config-silverwind-typescript": "3.2.3",
     "timeago.js": "4.0.2",
+    "typescript": "5.4.5",
+    "typescript-config-silverwind": "4.0.1",
     "updates": "16.0.1",
     "versions": "12.0.1",
-    "vitest": "1.5.0",
-    "vitest-config-silverwind": "8.0.4"
+    "vite": "5.2.11",
+    "vite-plugin-dts": "3.9.0",
+    "vitest": "1.5.3",
+    "vitest-config-silverwind": "9.0.4"
   }
 }
