--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "eslint": "9.39.1",
     "eslint-config-silverwind": "112.1.0",
     "timeago.js": "4.0.2",
+    "tsdown": "0.17.0-beta.6",
+    "tsdown-config-silverwind": "1.5.4",
     "typescript": "5.9.3",
     "typescript-config-silverwind": "14.0.0",
     "updates": "17.0.1",
     "versions": "14.0.3",
-    "vite": "7.2.6",
-    "vite-config-silverwind": "6.0.5",
     "vitest": "4.0.15",
     "vitest-config-silverwind": "10.4.2"
   }
