--- a/package.json
+++ b/package.json
@@ -14,17 +14,19 @@
     "dist"
   ],
   "devDependencies": {
-    "@types/node": "24.10.1",
-    "eslint": "9.39.1",
-    "eslint-config-silverwind": "112.1.0",
+    "@types/node": "25.2.0",
+    "@typescript/native-preview": "7.0.0-dev.20260212.1",
+    "eslint": "9.39.2",
+    "eslint-config-silverwind": "120.0.0",
     "timeago.js": "4.0.2",
-    "tsdown": "0.17.0-beta.6",
-    "tsdown-config-silverwind": "1.5.4",
+    "tsdown": "0.20.1",
+    "tsdown-config-silverwind": "1.7.3",
     "typescript": "5.9.3",
     "typescript-config-silverwind": "14.0.0",
-    "updates": "17.0.1",
-    "versions": "14.0.3",
-    "vitest": "4.0.15",
-    "vitest-config-silverwind": "10.4.2"
+    "updates": "17.1.0",
+    "updates-config-silverwind": "1.0.3",
+    "versions": "14.1.0",
+    "vitest": "4.0.18",
+    "vitest-config-silverwind": "10.6.1"
   }
 }
